@@ -1,3 +1,5 @@
+17.jan (la)
+      - add "No update available" dialog on manual update check
 16.jan (la)
       - add frequency preference for automatic update check
 12.jan (db)
